--- a/ToDoIt/Base.lproj/Main.storyboard
+++ b/ToDoIt/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tr1-CM-45G">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bB4-RB-rSO">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,40 +10,40 @@
     </dependencies>
     <scenes>
         <!--ToDoIt-->
-        <scene sceneID="Hyr-fe-xpc">
+        <scene sceneID="S9u-b2-WyY">
             <objects>
-                <tableViewController id="D4t-GZ-dei" customClass="ToDoListViewController" customModule="ToDoIt" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ftp-pf-4o3">
+                <tableViewController id="2Wt-4f-qdn" customClass="ToDoListViewController" customModule="ToDoIt" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="jvI-Du-2eV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoItemCell " id="p1y-Nd-rsh">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoItemCell" id="Kmh-vV-REU">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="p1y-Nd-rsh" id="aUo-2B-pd1">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kmh-vV-REU" id="ZkX-5k-o96">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="D4t-GZ-dei" id="PtO-ig-XlL"/>
-                            <outlet property="delegate" destination="D4t-GZ-dei" id="gF3-Kw-rGH"/>
+                            <outlet property="dataSource" destination="2Wt-4f-qdn" id="KAj-Wq-LMD"/>
+                            <outlet property="delegate" destination="2Wt-4f-qdn" id="pjI-hL-OEb"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoIt" id="duR-VR-QMB"/>
+                    <navigationItem key="navigationItem" title="ToDoIt" id="I6e-cl-YfJ"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="c2P-Ko-nLl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fy3-52-ybZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="577" y="145"/>
+            <point key="canvasLocation" x="368.80000000000001" y="8.5457271364317844"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="71f-Le-S2V">
+        <scene sceneID="J78-59-8IC">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tr1-CM-45G" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bB4-RB-rSO" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P9S-au-R4L">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yTs-4B-SxQ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.5101174879" green="0.65041185680000002" blue="0.32433652140000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -53,12 +53,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="D4t-GZ-dei" kind="relationship" relationship="rootViewController" id="CC1-k0-dFq"/>
+                        <segue destination="2Wt-4f-qdn" kind="relationship" relationship="rootViewController" id="Y9m-7f-enA"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="73t-fi-Zw9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z5o-8R-xzH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-446" y="146"/>
+            <point key="canvasLocation" x="-593" y="9"/>
         </scene>
     </scenes>
 </document>
