--- a/ToDoIt/Base.lproj/Main.storyboard
+++ b/ToDoIt/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="2Wt-4f-qdn" id="pjI-hL-OEb"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoIt" id="I6e-cl-YfJ"/>
+                    <navigationItem key="navigationItem" title="ToDoIt" id="I6e-cl-YfJ">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="add" id="j1t-LT-Kzt">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="2Wt-4f-qdn" id="pF9-6S-T08"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fy3-52-ybZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
